# kube-practice

./: Dockerfile  README.md  entrypoint.sh  parallel.sh  pyproject.toml
app/: main.py
